--- a/sln/test/test_cluster.vcxproj.filters
+++ b/sln/test/test_cluster.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="C:\GitHub_Repos\mp2-lab4-cluster\test\test_linked_list.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="C:\GitHub_Repos\mp2-lab4-cluster\test\test_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
