cluster management system

--- a/sln/src/cluster.vcxproj.filters
+++ b/sln/src/cluster.vcxproj.filters
@@ -6,7 +6,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_management_system.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_state.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_statistics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\linked_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\processor_state.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\program_info.h">
