--- a/sln/src/cluster.vcxproj
+++ b/sln/src/cluster.vcxproj
@@ -151,7 +151,11 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C:\GitHub_Repos\mp2-lab4-cluster\src\queue.cpp" />
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_management_system.h" />
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_state.h" />
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\cluster_statistics.h" />
     <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\linked_list.h" />
+    <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\processor_state.h" />
     <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\program_info.h" />
     <ClInclude Include="C:\GitHub_Repos\mp2-lab4-cluster\include\queue.h" />
   </ItemGroup>
