--- a/sln/src/cluster.vcxproj.filters
+++ b/sln/src/cluster.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\GitHub_Repos\mp2-lab4-cluster\src\queue.cpp">
+    <ClCompile Include="C:\GitHub_Repos\mp2-lab4-cluster\src\cluster_statistics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
